# advent-of-code-2025

./: .gitignore  README.md  pyproject.toml  ruff.toml
day-01/: run_01.py  test_01.py
day-02/: run_02.py  test_02.py
day-03/: run_03.py  test_03.py
day-04/: run_04.py  test_04.py
day-05/: run_05.py  test_05.py
day-06/: run_06.py  test_06.py
day-07/: run_07.py  test_07.py
day-08/: run_08.py  test_08.py
