[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "coverage>=7.6.8",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "more-itertools>=10.5.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "scipy>=1.14.1",
    "z3>=0.2.0",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def main\\(",
    "if __name__ == .__main__.:",
]
